--- a/htmlpages/views/aboutuslogged.html
+++ b/htmlpages/views/aboutuslogged.html
@@ -1,5 +1,4 @@
 <div class="container">
-
     <div class="row">
         <!-- Navigation bar at the top of the page -->
         <nav class="navbar navbar-default navbar-fixed-top" style="background-color:#FFFFFF;">
@@ -65,16 +64,20 @@
         </nav>
     </div>
 
-    <br><br><br>
+    <div class="row">
+        <div class="text-center">
+            <h2>About Us</h2><br><br>
+        </div>
+    </div>
 
-    <div class="backgroundimages">
-        <div class="row" style="height:400px;">
+    <div class="row">
+        <div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3">
             <div class="text-center">
-                <h2>The Frontier @ Science</h2>
+
+                An orbital project by Brehmer Chan Xi Quan and Low Jian Sheng.<br>
+
             </div>
         </div>
     </div>
+
 </div>
-
-
-
