--- a/htmlpages/views/account.html
+++ b/htmlpages/views/account.html
@@ -12,7 +12,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" ui-sref="home">iQueue</a>
+                    <a class="navbar-brand" ui-sref="loggedin">iQueue</a>
                 </div>
 
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -45,7 +45,7 @@
                             </ul>
                         </li>
                         <li>
-                            <a ui-sref="aboutus">About Us</a>
+                            <a ui-sref="aboutUsLogged">About Us</a>
                         </li>
                     </ul>
 
