--- a/htmlpages/views/loggedin.html
+++ b/htmlpages/views/loggedin.html
@@ -68,7 +68,7 @@
     <div class="row">
         <div class="text-center">
             <h2>LOGGED IN. HELLO</h2><br>
-            {{details}}
+            {{uName}}
         </div>
     </div>
 
