--- a/htmlpages/views/loggedin.html
+++ b/htmlpages/views/loggedin.html
@@ -67,8 +67,7 @@
 
     <div class="row">
         <div class="text-center">
-            <h2>LOGGED IN. HELLO</h2><br>
-            {{uName}}
+            <h2>LOGGED IN. HELLO {{uName}}</h2><br>
         </div>
     </div>
 
