modifed firstpage layout

--- a/htmlpages/views/firstpage.html
+++ b/htmlpages/views/firstpage.html
@@ -1,8 +1,7 @@
 <style>
     .carousel-inner > .item > img,
     .carousel-inner > .item > a > img {
-        width: auto;
-        height: auto;
+        width: 70%;
         margin: auto;
     }
 </style>
