added log in log out function

--- a/htmlpages/views/loggedin.html
+++ b/htmlpages/views/loggedin.html
@@ -67,8 +67,8 @@
 
     <div class="row">
         <div class="text-center">
-            <h2>LOGGED IN. HELLO {{uName}}</h2><br>
-            <div ng-click="logOut()">Logout</div>
+            <h2>LOGGED IN. HELLO {{user.userName}}</h2><br>
+            <button data-ng-click="logOut()">Logout</button>
         </div>
     </div>
 
