--- a/htmlpages/views/technoedge.html
+++ b/htmlpages/views/technoedge.html
@@ -13,7 +13,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" ui-sref="loggedin">iQueue</a>
+                    <a class="navbar-brand" ui-sref="home">iQueue</a>
                 </div>
 
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
