--- a/htmlpages/views/frontier.html
+++ b/htmlpages/views/frontier.html
@@ -51,8 +51,18 @@
                     </ul>
 
                     <ul class="nav navbar-nav navbar-right">
-                        <li>
-                            <a ui-sref="account">Account</a>
+                        <li class="dropdown">
+                            <a href="" class="dropdown-toggle" data-toggle="dropdown">More<span
+                                    class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li>
+                                    <a ui-sref="account">Account</a>
+                                </li>
+                                <li>
+                                    <a ui-sref="default" data-ng-click="logOut()">Log Out</a>
+                                </li>
+
+                            </ul>
                         </li>
 
                     </ul>
