--- a/htmlpages/views/loggedin.html
+++ b/htmlpages/views/loggedin.html
@@ -50,8 +50,18 @@
                     </ul>
 
                     <ul class="nav navbar-nav navbar-right">
-                        <li>
-                            <a ui-sref="account">Account</a>
+                        <li class="dropdown">
+                            <a href="" class="dropdown-toggle" data-toggle="dropdown">More<span
+                                    class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li>
+                                    <a ui-sref="account">Account</a>
+                                </li>
+                                <li>
+                                    <a ui-sref="default" data-ng-click="logOut()">Log Out</a>
+                                </li>
+
+                            </ul>
                         </li>
 
                     </ul>
@@ -68,7 +78,6 @@
     <div class="row">
         <div class="text-center">
             <h2>LOGGED IN. HELLO {{user.userName}}</h2><br>
-            <button data-ng-click="logOut()">Logout</button>
         </div>
     </div>
 
