changed notification bar

--- a/htmlpages/css/custom.css
+++ b/htmlpages/css/custom.css
@@ -12,3 +12,15 @@
 .carousel-control {
 	width: 15%;
 }
+
+
+.row-centered {
+	text-align:center;
+}
+
+.app-title {
+	font-family: 'Slabo 27px', serif;
+	font-size: 50px;
+}
+
+
