--- a/htmlpages/css/bootstrap.css
+++ b/htmlpages/css/bootstrap.css
@@ -4496,26 +4496,26 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-default {
-  background-color: #f8f8f8;
-  border-color: #e7e7e7;
+  background-color: #3c3c3c;
+  border-color: #3c3c3c;
 }
 .navbar-default .navbar-brand {
-  color: #777;
+  color: #f9f9f9;
 }
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus {
-  color: #5e5e5e;
+  color: #31708f;
   background-color: transparent;
 }
 .navbar-default .navbar-text {
   color: #777;
 }
 .navbar-default .navbar-nav > li > a {
-  color: #777;
+  color: #f9f9f9;
 }
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
-  color: #333;
+  color: #c4e3f3;
   background-color: transparent;
 }
 .navbar-default .navbar-nav > .active > a,
@@ -6248,9 +6248,9 @@ button.close {
 .carousel-inner > .item {
   position: relative;
   display: none;
-  -webkit-transition: .6s ease-in-out left;
-       -o-transition: .6s ease-in-out left;
-          transition: .6s ease-in-out left;
+  -webkit-transition: 18s ease-in-out left;
+       -o-transition: 1s ease-in-out left;
+          transition: 1s ease-in-out left;
 }
 .carousel-inner > .item > img,
 .carousel-inner > .item > a > img {
