--- a/htmlpages/views/aboutuslogged.html
+++ b/htmlpages/views/aboutuslogged.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <!-- Navigation bar at the top of the page -->
-        <nav class="navbar navbar-default navbar-fixed-top" style="background-color:#FFFFFF;">
+        <nav class="navbar navbar-default navbar-fixed-top">
             <div class="container-fluid">
                 <!-- Brand and toggle get grouped together for better mobile display-->
                 <div class="navbar-header">
