--- a/htmlpages/views/account.html
+++ b/htmlpages/views/account.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <!-- Navigation bar at the top of the page -->
-        <nav class="navbar navbar-default navbar-fixed-top" style="background-color:#FFFFFF;">
+        <nav class="navbar navbar-default navbar-fixed-top">
             <div class="container-fluid">
                 <!-- Brand and toggle get grouped together for better mobile display-->
                 <div class="navbar-header">
@@ -51,7 +51,7 @@
 
                     <ul class="nav navbar-nav navbar-right">
                         <li class="dropdown">
-                            <a href="" class="dropdown-toggle" data-toggle="dropdown">Account <span
+                            <a href="" class="dropdown-toggle" data-toggle="dropdown">More<span
                                     class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li>
@@ -73,7 +73,7 @@
 
         </nav>
     </div>
-    <br><br><br><br>
+    <br><br><br>
 
     <div class="row">
         <div class="text-center">
