made some design changes

--- a/htmlpages/views/loggedin.html
+++ b/htmlpages/views/loggedin.html
@@ -73,7 +73,7 @@
 
         </nav>
     </div>
-<br><br><br>
+    <br><br><br><br>
 
     <div class="row">
         <div class="text-center">
@@ -81,6 +81,67 @@
         </div>
     </div>
 
+
+    <div class="row" style="padding-top:50px;">
+
+        <div class="col-lg-4">
+            <div class="text-center">
+                <img class="img-circle"src="/images/deck1.jpg" alt="The Deck" width="180" height="180" ui-sref="deck">
+                <h2>The Deck</h2>
+                <p class="italic">FASS</p>
+            </div>
+
+        </div>
+
+        <div class="col-lg-4">
+            <div class="text-center">
+                <img class="img-circle" src="/images/terrace1.jpg" alt="The Terrace" width="180" height="180" ui-sref="terrace">
+                <h2>The Terrace</h2>
+                <p class="italic">Biz</p>
+            </div>
+        </div>
+
+        <div class="col-lg-4">
+            <div class="text-center">
+                <img class="img-circle" src="/images/frontier1.jpg" alt="The Frontier" width="180" height="180" ui-sref="frontier">
+                <h2>The Frontier</h2>
+                <p class="italic">Science</p>
+            </div>
+
+        </div>
+
+
+
+
+    </div>
+
+    <div class="row" style="padding-top:50px;">
+        <div class="col-lg-4">
+            <div class="text-center">
+                <img class="img-circle" src="/images/technoedge1.jpg" alt="Technoedge" width="180" height="180" ui-sref="technoedge">
+                <h2>Technoedge</h2>
+                <p class="italic">Engineering</p>
+            </div>
+
+        </div>
+
+        <div class="col-lg-4">
+            <div class="text-center">
+                <img class="img-circle" src="/images/koufu1.jpg" alt="Koufu" width="180" height="180" ui-sref="koufu">
+                <h2>Koufu</h2>
+                <p class="italic">UTown</p>
+            </div>
+        </div>
+
+        <div class="col-lg-4">
+            <div class="text-center">
+                <img class="img-circle" src="/images/foodclique1.jpg" alt="FoodClique" width="180" height="180" ui-sref="foodclique">
+                <h2>Food Clique</h2>
+                <p class="italic">UTown</p>
+            </div>
+
+        </div>
+    </div>
 
 
 
