--- a/htmlpages/views/account.html
+++ b/htmlpages/views/account.html
@@ -77,7 +77,7 @@
 
     <div class="row">
         <div class="text-center">
-            <h2>This is account page.</h2>
+            <h2>{{user.userName}}, this is what you have ordered.</h2>
         </div>
     </div>
 
