--- a/htmlpages/views/terrace.html
+++ b/htmlpages/views/terrace.html
@@ -90,10 +90,10 @@
 <div class="container">
     <!--<h2>Dynamic Pills</h2> -->
     <ul class="nav nav-pills">
-        <li class="active"><a data-toggle="pill" href="/#stall1">Chicken Rice Stall</a></li>
-        <li><a data-toggle="pill" href="/#stall2">Western Stall</a></li>
-        <li><a data-toggle="pill" href="/#stall3">Stall 3</a></li>
-        <li><a data-toggle="pill" href="/#stall4">Stall 4</a></li>
+        <li class="active"><a data-toggle="pill" href="#stall1">Chicken Rice Stall</a></li>
+        <li><a data-toggle="pill" href="#stall2">Western Stall</a></li>
+        <li><a data-toggle="pill" href="#stall3">Stall 3</a></li>
+        <li><a data-toggle="pill" href="#stall4">Stall 4</a></li>
     </ul>
 
     <div class="tab-content">
@@ -101,14 +101,15 @@
             <h3>Chicken Rice Stall</h3>
             <img src="images/chickenrice.jpg" alt="Stall 1" style="width:400px;height:300px;">
             <div class="right">
+                Select your dish!<br>
                 <span class="dropdown">
                     <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
                         Select Your Meal!<span class="caret"></span>
                     </button>
                     <ul class="dropdown-menu">
-                        <li><a href="#">chicken rice</a></li>
-                        <li><a href="#">duck rice</a></li>
-                        <li><a href="#">char siew rice</a></li>
+                        <li><a class="add-to-cart" href="#" data-name="Chicken rice" data-price="2.30">Chicken rice</a></li>
+                        <li><a class="add-to-cart" href="#" data-name="Duck rice" data-price="2.50">Duck rice</a></li>
+                        <li><a class="add-to-cart" href="#" data-name="Char Siew rice" data-price="2.40">Char Siew rice</a></li>
                     </ul>
                 </span>
             </div>
@@ -118,14 +119,15 @@
             <h3>Western Stall</h3>
             <img src="images/western.jpg" alt="Stall 1" style="width:400px;height:300px;">
             <div class="right">
+                Select your dish!<br>
                 <span class="dropdown">
                     <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
                         Select Your Meal!<span class="caret"></span>
                     </button>
                     <ul class="dropdown-menu">
-                        <li><a href="#">chicken rice</a></li>
-                        <li><a href="#">duck rice</a></li>
-                        <li><a href="#">char siew rice</a></li>
+                       <li><a class="add-to-cart" href="#" data-name="Chicken chop" data-price="3.50">Chicken Chop</a></li>
+                        <li><a class="add-to-cart" href="#" data-name="Fish & Chips" data-price="3.30">Fish & Chips</a></li>
+                        <li><a class="add-to-cart" href="#" data-name="Pasta" data-price="2.50">Pasta</a></li>
                     </ul>
                 </span>
             </div>
@@ -164,4 +166,96 @@
         </div>
     </div>
 </div>
+
+<div>
+
+    <button id="clear-cart">Clear Cart</button>
+    <button id="add-to-cart" data-name=$(this).attr("data-name") data-price=Number($(this).attr("data-price"))>Add to Cart</button>
+</div>
+
+
+<div>
+    <ul id="show-cart">
+        <li>???????</li>
+    </ul>
+    <div>You have <span id="count-cart">X</span> items in your cart</div>
+    <div>Total Cart:$<span id="total-cart"></span></div>
+</div>
+
+
+
+<script src="js/shoppingCart.js"></script>
+
+<script>
+    $(function(){
+
+        $(".dropdown-menu").on('click', 'li a', function(){
+            $(".btn:first-child").text($(this).text());
+            $(".btn:first-child").val($(this).text());
+        });
+
+    });
+    $(".put-in-cart").click(function(event){
+        event.preventDefault();
+        var name = $(this).attr("data-name");
+        var price = Number($(this).attr("data-price"));
+    });
+    $(".add-to-cart").click(function(event){
+        event.preventDefault();
+        var name = $(this).attr("data-name");
+        var price = Number($(this).attr("data-price"));
+        shoppingCart.addItemToCart(name, price, 1);
+        displayCart();
+    });
+    $("#clear-cart").click(function(event){
+        shoppingCart.clearCart();
+        displayCart();
+    });
+    function displayCart() {
+        var cartArray = shoppingCart.listCart();
+        console.log(cartArray);
+        var output = "";
+        for (var i in cartArray) {
+            output += "<li>"
+                    +cartArray[i].name
+                    +" <input class='item-count' type='number.toFixed(0)' data-name='"
+                    +cartArray[i].name
+                    +"' value='"+cartArray[i].count+"' >"
+                    +" x "+cartArray[i].price
+                    +" = "+cartArray[i].total
+                    +" <button class='plus-item' data-name='"
+                    +cartArray[i].name+"'>+</button>"
+                    +" <button class='subtract-item' data-name='"
+                    +cartArray[i].name+"'>-</button>"
+                    +" <button class='delete-item' data-name='"
+                    +cartArray[i].name+"'>X</button>"
+                    +"</li>";
+        }
+        $("#show-cart").html(output);
+        $("#count-cart").html( shoppingCart.countCart() );
+        $("#total-cart").html( shoppingCart.totalCart() );
+    }
+    $("#show-cart").on("click", ".delete-item", function(event){
+        var name = $(this).attr("data-name");
+        shoppingCart.removeItemFromCartAll(name);
+        displayCart();
+    });
+    $("#show-cart").on("click", ".subtract-item", function(event){
+        var name = $(this).attr("data-name");
+        shoppingCart.removeItemFromCart(name);
+        displayCart();
+    });
+    $("#show-cart").on("click", ".plus-item", function(event){
+        var name = $(this).attr("data-name");
+        shoppingCart.addItemToCart(name, 0, 1);
+        displayCart();
+    });
+    $("#show-cart").on("change", ".item-count", function(event){
+        var name = $(this).attr("data-name");
+        var count = Number($(this).val());
+        shoppingCart.setCountForItem(name, count);
+        displayCart();
+    });
+    displayCart();
+</script>
 
