--- a/htmlpages/views/terrace.html
+++ b/htmlpages/views/terrace.html
@@ -89,79 +89,94 @@
 
 <div class="container">
     <!--<h2>Dynamic Pills</h2> -->
-    <ul class="nav nav-pills">
-        <li class="active"><a data-toggle="pill" href="#stall1">Chicken Rice Stall</a></li>
-        <li><a data-toggle="pill" href="#stall2">Western Stall</a></li>
-        <li><a data-toggle="pill" href="#stall3">Stall 3</a></li>
-        <li><a data-toggle="pill" href="#stall4">Stall 4</a></li>
-    </ul>
+    <div class="row">
+        <ul class="nav nav-pills">
+            <li class="active"><a data-toggle="pill" href="#stall1">Chicken Rice Stall</a></li>
+            <li><a data-toggle="pill" href="#stall2">Western Stall</a></li>
+            <li><a data-toggle="pill" href="#stall3">Stall 3</a></li>
+            <li><a data-toggle="pill" href="#stall4">Stall 4</a></li>
+        </ul>
 
-    <div class="tab-content">
-        <div id="stall1" class="tab-pane fade in active">
-            <h3>Chicken Rice Stall</h3>
-            <img src="images/chickenrice.jpg" alt="Stall 1" style="width:400px;height:300px;">
-            <div class="right">
-                Select your dish!<br>
-                <span class="dropdown">
-                    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
-                        Select Your Meal!<span class="caret"></span>
-                    </button>
-                    <ul class="dropdown-menu">
-                        <li><a class="add-to-cart" href="#" data-name="Chicken rice" data-price="2.30">Chicken rice</a></li>
-                        <li><a class="add-to-cart" href="#" data-name="Duck rice" data-price="2.50">Duck rice</a></li>
-                        <li><a class="add-to-cart" href="#" data-name="Char Siew rice" data-price="2.40">Char Siew rice</a></li>
-                    </ul>
-                </span>
-            </div>
-        </div>
+        <div class="col-lg-12">
+            <div class="tab-content">
+                <div id="stall1" class="tab-pane fade in active">
+                    <h3>Chicken Rice Stall</h3>
+                    <img src="images/chickenrice.jpg" alt="Stall 1" style="width:400px;height:300px;">
+                    <div class="right">
+                        Select your dish!<br>
+                        <span class="dropdown">
+                            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
+                                Select Your Meal!<span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li><a class="put-in-cart" href="#" data-name="Chicken rice" data-price="2.30">Chicken rice</a></li>
+                                <li><a class="put-in-cart" href="#" data-name="Duck rice" data-price="2.50">Duck rice</a></li>
+                                <li><a class="put-in-cart" href="#" data-name="Char Siew rice" data-price="2.40">Char Siew rice</a></li>
+                            </ul>
+                            <button class="add-to-cart" type="button">Add to Cart!</button>
+                            <button id="clear-cart">Clear Cart</button>
+                        </span>
+                    </div>
+                </div>
 
-        <div id="stall2" class="tab-pane fade">
-            <h3>Western Stall</h3>
-            <img src="images/western.jpg" alt="Stall 1" style="width:400px;height:300px;">
-            <div class="right">
-                Select your dish!<br>
-                <span class="dropdown">
-                    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
-                        Select Your Meal!<span class="caret"></span>
-                    </button>
-                    <ul class="dropdown-menu">
-                       <li><a class="add-to-cart" href="#" data-name="Chicken chop" data-price="3.50">Chicken Chop</a></li>
-                        <li><a class="add-to-cart" href="#" data-name="Fish & Chips" data-price="3.30">Fish & Chips</a></li>
-                        <li><a class="add-to-cart" href="#" data-name="Pasta" data-price="2.50">Pasta</a></li>
-                    </ul>
-                </span>
-            </div>
-        </div>
-        <div id="stall3" class="tab-pane fade">
-            <h3>Stall 3</h3>
-            <img src="images/chickenrice.jpg" alt="Stall 1" style="width:400px;height:300px;">
-            <div class="right">
-                <span class="dropdown">
-                    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
-                        Select Your Meal!<span class="caret"></span>
-                    </button>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">chicken rice</a></li>
-                        <li><a href="#">duck rice</a></li>
-                        <li><a href="#">char siew rice</a></li>
-                    </ul>
-                </span>
-            </div>
-        </div>
-        <div id="stall4" class="tab-pane fade">
-            <h3>Stall 4</h3>
-            <img src="images/western.jpg" alt="Stall 1" style="width:400px;height:300px;">
-            <div class="right">
-                <span class="dropdown">
-                    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
-                        Select Your Meal!<span class="caret"></span>
-                    </button>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">chicken chop</a></li>
-                        <li><a href="#">fish & chips</a></li>
-                        <li><a href="#">spaghetti</a></li>
-                    </ul>
-                </span>
+                <div id="stall2" class="tab-pane fade">
+                    <h3>Western Stall</h3>
+                    <img src="images/western.jpg" alt="Stall 1" style="width:400px;height:300px;">
+                    <div class="right">
+                        Select your dish!<br>
+                        <span class="dropdown">
+                            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
+                                Select Your Meal!<span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu">
+                               <li><a class="put-in-cart" href="#" data-name="Chicken chop" data-price="3.50">Chicken Chop</a></li>
+                                <li><a class="put-in-cart" href="#" data-name="Fish & Chips" data-price="3.30">Fish & Chips</a></li>
+                                <li><a class="put-in-cart" href="#" data-name="Pasta" data-price="2.50">Pasta</a></li>
+                            </ul>
+                            <button class="add-to-cart" type="button">Add to Cart!</button>
+                            <button id="clear-cart">Clear Cart</button>
+                        </span>
+                    </div>
+                </div>
+                <div id="stall3" class="tab-pane fade">
+                    <h3>Stall 3</h3>
+                    <img src="images/chickenrice.jpg" alt="Stall 1" style="width:400px;height:300px;">
+                    <div class="right">
+                        Select your dish!<br>
+                        <span class="dropdown">
+                            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
+                                Select Your Meal!<span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li><a href="#">chicken rice</a></li>
+                                <li><a href="#">duck rice</a></li>
+                                <li><a href="#">char siew rice</a></li>
+                            </ul>
+                            <button class="add-to-cart" type="button">Add to Cart!</button>
+                            <button id="clear-cart">Clear Cart</button>
+                        </span>
+                    </div>
+                </div>
+
+                <div id="stall4" class="tab-pane fade">
+                    <h3>Stall 4</h3>
+                    <img src="images/western.jpg" alt="Stall 1" style="width:400px;height:300px;">
+                    <div class="right">
+                        Select your dish!<br>
+                        <span class="dropdown">
+                            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
+                                Select Your Meal!<span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li><a href="#">chicken chop</a></li>
+                                <li><a href="#">fish & chips</a></li>
+                                <li><a href="#">spaghetti</a></li>
+                            </ul>
+                            <button class="add-to-cart" type="button">Add to Cart!</button>
+                            <button id="clear-cart">Clear Cart</button>
+                        </span>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -169,24 +184,25 @@
 
 <div>
 
-    <button id="clear-cart">Clear Cart</button>
-    <button id="add-to-cart" data-name=$(this).attr("data-name") data-price=Number($(this).attr("data-price"))>Add to Cart</button>
 </div>
 
 
-<div>
+<!--<div>
     <ul id="show-cart">
         <li>???????</li>
     </ul>
     <div>You have <span id="count-cart">X</span> items in your cart</div>
     <div>Total Cart:$<span id="total-cart"></span></div>
-</div>
+</div>-->
 
 
 
 <script src="js/shoppingCart.js"></script>
 
 <script>
+    var name ;
+    var price;
+
     $(function(){
 
         $(".dropdown-menu").on('click', 'li a', function(){
@@ -197,18 +213,31 @@
     });
     $(".put-in-cart").click(function(event){
         event.preventDefault();
-        var name = $(this).attr("data-name");
-        var price = Number($(this).attr("data-price"));
+        //var name = $(this).attr("data-name");
+        //var price = Number($(this).attr("data-price"));
+        name = $(this).attr("data-name");
+        price = Number($(this).attr("data-price"));
+        console.log(name);
+
     });
     $(".add-to-cart").click(function(event){
         event.preventDefault();
-        var name = $(this).attr("data-name");
-        var price = Number($(this).attr("data-price"));
+        /*var name = $(".put-in-cart").attr("data-name");
+        console.log(name);
+        var price = Number($(".put-in-cart").attr("data-price"));*/
         shoppingCart.addItemToCart(name, price, 1);
+        if (price === undefined){
+            alert("Please choose an item from the dropdown button!")
+        }
+        else {
+            alert("Item added to cart!");
+        }
         displayCart();
     });
     $("#clear-cart").click(function(event){
         shoppingCart.clearCart();
+        alert("Cart cleared!");
+        name = null;
         displayCart();
     });
     function displayCart() {
