--- a/htmlpages/views/frontier.html
+++ b/htmlpages/views/frontier.html
@@ -59,6 +59,9 @@
                                     <a ui-sref="account">Account</a>
                                 </li>
                                 <li>
+                                    <a ng-show="user.isStoreOwner" ui-sref="store">My Store</a>
+                                </li>
+                                <li>
                                     <a ui-sref="default" data-ng-click="logOut()">Log Out</a>
                                 </li>
 
