--- a/htmlpages/views/store.html
+++ b/htmlpages/views/store.html
@@ -1,1 +1,83 @@
-THIS IS THE STORE.
+<div class="container">
+
+    <div class="row">
+        <!-- Navigation bar at the top of the page -->
+        <nav class="navbar navbar-default navbar-fixed-top">
+            <div class="container-fluid">
+                <!-- Brand and toggle get grouped together for better mobile display-->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                            data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                        <span class="sr-only">Toggle Navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" ui-sref="home">iQueue</a>
+                </div>
+
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
+                    <ul class="nav navbar-nav">
+                        <!-- Canteen Dropdown -->
+                        <li class="dropdown">
+                            <a href="" class="dropdown-toggle" data-toggle="dropdown">Canteens <span
+                                    class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li>
+                                    <a ui-sref="deck">The Deck</a>
+                                </li>
+                                <li>
+                                    <a ui-sref="terrace">The Terrace</a>
+                                </li>
+                                <li>
+                                    <a ui-sref="frontier">The Frontier</a>
+                                </li>
+                                <li>
+                                    <a ui-sref="technoedge">Technoedge</a>
+                                </li>
+                                <li>
+                                    <a ui-sref="koufu">Koufu @ uTown</a>
+                                </li>
+                                <li>
+                                    <a ui-sref="foodclique">FoodClique @ uTown</a>
+                                </li>
+
+                            </ul>
+                        </li>
+                        <li>
+                            <a ui-sref="aboutUsLogged">About Us</a>
+                        </li>
+                    </ul>
+
+                    <ul class="nav navbar-nav navbar-right">
+                        <li class="dropdown">
+                            <a href="" class="dropdown-toggle" data-toggle="dropdown">More<span
+                                    class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li>
+                                    <a ui-sref="account">Account</a>
+                                </li>
+                                <li>
+                                    <a ng-show="user.isStoreOwner" ui-sref="store">My Store</a>
+                                </li>
+                                <li>
+                                    <a ui-sref="default" data-ng-click="logOut()">Log Out</a>
+                                </li>
+
+                            </ul>
+                        </li>
+
+                    </ul>
+
+                </div>
+                <!--navbar collapse -->
+            </div>
+            <!--container-fluid -->
+
+        </nav>
+    </div>
+</div>
+
+<br><br><br>
+THIS IS THE STORE
