--- a/htmlpages/views/aboutuslogged.html
+++ b/htmlpages/views/aboutuslogged.html
@@ -55,7 +55,10 @@
                                     class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li>
-                                    <a ui-sref="account">Account</a>
+                                    <a ui-sref="account">Cart</a>
+                                </li>
+                                <li>
+                                    <a ui-sref="order">Order</a>
                                 </li>
                                 <li>
                                     <a ng-show="user.isStoreOwner" ui-sref="store">My Store</a>
