updated order page

--- a/htmlpages/views/orders.html
+++ b/htmlpages/views/orders.html
@@ -93,7 +93,7 @@
     <div class="row" style="padding-top:50px;">
 
 
-        <div class="col-lg-offset-4 col-lg-4">
+        <div class="col-sm-offset-4 col-sm-4">
             <div class="well well-lg">
                 <div class ="row">
                     <div class = "text-center">
@@ -102,12 +102,45 @@
                 </div>
 
                 <div class = "row">
-                    <table>
-                        <tr ng-repeat="x in testData">
-                            <td ng-repeat="y in x.orders">{{y.name}}</td>
-                            <td>{{x.total | currency}}</td>
-                        </tr>
-                    </table>
+
+                    <div class="text-center" style="padding-top: 5%;">
+                        {{testData.noOrder}}
+                    </div>
+
+                    <div class="row" ng-repeat="x in testData" style="padding-left:10%; padding-top:5%; padding-bottom:5%; padding-right:10%;">
+                        <div style="font-style:italic;">
+                            Order {{$index + 1}}
+                        </div>
+                        <table class="table">
+                            <tr>
+                                <th>Food</th>
+                                <th>Price</th>
+                            </tr>
+                            <tr ng-repeat="y in x.orders">
+
+                                <td style="width: 70%;">
+                                    {{y.name}}
+                                </td>
+                                <td>
+
+                                    {{y.price | currency}}
+
+                                </td>
+                            </tr>
+                            <tr>
+                                <th>
+                                    Total:
+                                </th>
+                                <td>
+                                    {{x.total | currency}}
+                                </td>
+
+                            </tr>
+
+                        </table>
+
+
+                    </div>
                 </div>
             </div>
 
