updated log and terrace page i think

--- a/htmlpages/views/terrace.html
+++ b/htmlpages/views/terrace.html
@@ -119,8 +119,8 @@
                             <ul class="dropdown-menu">
                                 <li><a class="put-in-cart" data-name="Chicken rice" data-toggle="collapse"
                                        data-parent="#accordion" href="#chickenrice" data-price="2.30">Chicken rice [$2.30]</a></li>
-                                <li><a class="put-in-cart" href="#" data-name="Duck rice" data-toggle="collapse"
-                                       data-parent="#accordion" data-target="#duckrice" data-price="2.50">Duck rice [$2.50]</a></li>
+                                <li><a class="put-in-cart" href="#duckrice" data-name="Duck rice" data-toggle="collapse"
+                                       data-parent="#accordion" data-price="2.50">Duck rice [$2.50]</a></li>
                                 <li><a class="put-in-cart" href="#" data-name="Char Siew rice" data-price="2.40">Char Siew rice [$2.40]</a></li>
                             </ul>
                             <button class="add-to-cart" type="button">Add to Cart!</button>
